Change to HTML page

--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,11 @@
         <!-- <div id="background"></div> -->
         <!-- Hero -->
         <div class="slant-bg"></div>
+        <p class="section-title">Aastha Technologies</p>
         <div id="brand-info-container">
             <div id="brand-info">
                 <div id="brand-info-text">
-                    <p class="section-title">Aastha Tech</p>
+                    <p class="section-title">Aastha Technologies</p>
                     <p class="section-subtitle">Design and build optimized network</p>
                     <p id="brand-info-description">
                         Our trained team in South East Asia work closely with telecom operators and large 
@@ -91,7 +92,7 @@
     </div>
 
     <div id="why" class="section">
-        <p class="section-title" id="why-title">Why Aastha?</p>
+        <p class="section-title" id="why-title">Why Aastha Technologies?</p>
         <div id="why-items-container">
             <div class="why-item why-one">
                 <div class="why-item-icon">
